# learnopengl

./: Cargo.toml  copytextures.bat
src/: lib.rs  main.rs
src/shaders/: fragment_shader.glsl  vertex_shader_light.glsl
