[package]
name = "learnopengl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glam = "0.24.1"
image = { version = "0.24.6", default-features = false, features = ["jpeg", "png"]}
sdl2 = "0.35.2"
